--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
-    "serverstart": "local-library:* npm run devstart"
+    "serverstart": "inventory-app* npm run devstart"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "mongodb": "^5.6.0",
+    "mongodb": "^2.2.12",
     "mongoose": "^7.3.1",
     "morgan": "~1.9.1",
+    "nodemon": "^2.0.22",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
